[package]
name = "bitcoin-verify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoincore-rpc = { git = "https://github.com/rust-bitcoin/rust-bitcoincore-rpc"}
hex = "0.4.3"
bitcoin = "0.31.0"
hex_lit = "0.1.1"
rand = "0.8.5"
secp256k1 = { version = "0.28.0", features = ["hashes", "alloc"] }
bech32 = "0.9.1"
clap = { version = "4.1", features = ["derive"] }